v8/tests/messages/regression-62563.out
regression-62563.js:4: Uncaught SyntaxError: Unexpected token ?
var MYVAR = ? ? ? ?
            ^
