v8/tests/messages/regression-62563.js
// Tests that the vm is comfortable issuing messages on lines that end
// with EOF.

var MYVAR = ? ? ? ?